--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
           <div class="bottom-section">
             <article>
-              <h1>I'm Enrikas Ramašauskas, a Web developer</h1>
+              <h1>I'm Enrikas, a Web developer</h1>
 
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam
